k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-cicd
  labels:
    app: example
    tier: cicd
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: example
    tier: cicd
