k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-cicd
  labels:
    app: example
    tier: cicd
spec:
  defaultBackend:
    service:
      name: example-cicd
      port:
        number: 80
  ingressClassName: traefik
  rules:
    - host: example-cicd.quantumteknologi.com
      http:
        paths:
          - backend:
              service:
                name: example-cicd
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - example-cicd.quantumteknologi.com
      secretName: wilcard-quantum
